# synchronizer

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
algo/: approximate_time_algo.cpp  approximate_time_algo.h  base_sync_algo.h
sync/: channel_manager.cpp  channel_manager.h  data_types.h  sync.h
